kubernetes/apps/garage/docs-site/app/vloer-legacy.httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: docs-vloer-legacy
  namespace: garage
  annotations:
    external-dns.alpha.kubernetes.io/exclude: "true"
    monitoring.webgrip.io/synthetic-check: blackbox-docs-vloer-legacy
spec:
  hostnames:
    - docs.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: Exact
            value: /glide-legacy/de-vloer
      filters:
        - type: RequestRedirect
          requestRedirect:
            statusCode: 302
            path:
              type: ReplaceFullPath
              replaceFullPath: /glide-legacy/de-vloer/
    - matches:
        - path:
            type: PathPrefix
            value: /glide-legacy/de-vloer
      filters:
        - type: URLRewrite
          urlRewrite:
            hostname: docs-site
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /de-vloer
      backendRefs:
        - name: garage-s3
          namespace: garage
          port: 3902
    - matches:
        - path:
            type: PathPrefix
            value: /de-vloer/domain
      filters:
        - type: RequestRedirect
          requestRedirect:
            statusCode: 302
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /glide/domain
    - matches:
        - path:
            type: PathPrefix
            value: /de-vloer/landscape
      filters:
        - type: RequestRedirect
          requestRedirect:
            statusCode: 302
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /glide/landscape
    - matches:
        - path:
            type: PathPrefix
            value: /de-vloer/documentation
      filters:
        - type: RequestRedirect
          requestRedirect:
            statusCode: 302
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /glide/documentation
    - matches:
        - path:
            type: PathPrefix
            value: /de-vloer/monorepo-transition
      filters:
        - type: RequestRedirect
          requestRedirect:
            statusCode: 302
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /glide/migration-proposal
    - matches:
        - path:
            type: PathPrefix
            value: /de-vloer/operations/local-unified-demo
      filters:
        - type: RequestRedirect
          requestRedirect:
            statusCode: 302
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /glide/workflows/local-demo
    - matches:
        - path:
            type: PathPrefix
            value: /de-vloer/operations/unified-baseline
      filters:
        - type: RequestRedirect
          requestRedirect:
            statusCode: 302
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /glide/workflows/managed-execution
    - matches:
        - path:
            type: PathPrefix
            value: /de-vloer
      filters:
        - type: RequestRedirect
          requestRedirect:
            statusCode: 302
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /glide/unfold
    - matches:
        - path:
            type: PathPrefix
            value: /glide/vloer
      filters:
        - type: RequestRedirect
          requestRedirect:
            statusCode: 302
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /glide/unfold
